--- a/css/style.sass
+++ b/css/style.sass
@@ -1,3 +1,9 @@
+/* || variables */ 
+
+$pale-blue: hsl(225, 100%, 94%)
+$breakpoint-mobile: 375px
+
+  
 /* || Style reset */ 
 
 * 
@@ -7,7 +13,12 @@
 
 /* || General styles */ 
 
+html, body
+  height: 100%
 
+body
+  background: url(/images/pattern-background-desktop.svg) top no-repeat, $pale-blue
+  background-size: 100%
 
 .attribution 
   font-size: 11px 
