--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,14 @@ html, body {
 
 body {
   background: url(/images/pattern-background-desktop.svg) top no-repeat, #e0e8ff;
-  background-size: 100%;
+  background-size: contain;
+}
+
+@media all and (orientation: portrait) {
+  body {
+    background: url(/images/pattern-background-mobile.svg) top no-repeat, #e0e8ff;
+    background-size: contain;
+  }
 }
 
 .attribution {
