Added HTML elements to content on page

--- a/css/style.sass
+++ b/css/style.sass
@@ -2,6 +2,12 @@
 
 $pale-blue: hsl(225, 100%, 94%)
 
+$purple-theme: hsl(245, 75%, 52%)
+$white-blue-container: hsl(225, 100%, 98%)
+$dark-blue: hsl(223, 47%, 23%)
+$desaturated-blue: hsl(224, 23%, 55%)
+
+
 $container-max-width: 30em
 $container-min-height: 42em
 $container-margin: 2em
