--- a/css/style.sass
+++ b/css/style.sass
@@ -3,7 +3,7 @@
 $pale-blue: hsl(225, 100%, 94%)
 
 $purple-theme: hsl(245, 75%, 52%)
-$white-blue-container: hsl(225, 100%, 98%)
+$very-pale-blue: hsl(225, 100%, 98%)
 $dark-blue: hsl(223, 47%, 23%)
 $desaturated-blue: hsl(224, 23%, 55%)
 
@@ -11,6 +11,7 @@ $desaturated-blue: hsl(224, 23%, 55%)
 $container-max-width: 28em
 $container-min-height: 42em
 $container-margin: 2em
+$elements-width: 22em
 
 /* Fonts */
 
@@ -40,6 +41,7 @@ body
     background: url(/images/pattern-background-mobile.svg) top no-repeat, $pale-blue
     background-size: contain
 
+
 h1, h3, a, p
   font-family: 'Red Hat Display', sans-serif
 
@@ -51,7 +53,7 @@ p
 .container
   place-self: center
 
-  background-color: $white-blue-container
+  background-color: white
 
   max-width: $container-max-width
   min-height: $container-min-height
@@ -60,12 +62,38 @@ p
 
   display: grid
   grid-template-columns: auto
-  grid-template-rows: auto 2.5fr 1fr 1fr 0.5fr
+  grid-template-rows: auto 2fr 1fr 0.8fr 0.5fr
 
+.image__image
+  max-width: 100%
+  height: auto
 
-.container__text
+.container__text, .container__cancel
   place-self: center
+  height: 100%
+  width: $elements-width
+  text-align: center
 
+.container__plan
+  place-self: stretch
+
+  display: flex
+  justify-content: center
+
+.plan__box
+  background-color: $very-pale-blue
+  width: $elements-width
+
+.text__heading
+  margin-top: 1.3em
+  margin-bottom: 0.7em
+  font-weight: 700
+  color: $dark-blue
+
+.text__paragraf
+  color: $desaturated-blue
+  line-height: 1.5em
+  
 
 /* Footer styling */
 
