--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   }
 }
 
-h1, h3, a, p {
+h1, h3, a, p, button {
   font-family: 'Red Hat Display', sans-serif;
 }
 
@@ -43,16 +43,16 @@ p {
 /* || Content styles */
 .container {
   place-self: center;
-  background-color: white;
+  background-color: #FFF;
   max-width: 28em;
-  min-height: 42em;
+  min-height: 45em;
   margin: 2em;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto;
       grid-template-columns: auto;
-  -ms-grid-rows: auto 2fr 1fr 0.8fr 0.5fr;
-      grid-template-rows: auto 2fr 1fr 0.8fr 0.5fr;
+  -ms-grid-rows: auto 2fr 0.9fr 1fr 0.6fr;
+      grid-template-rows: auto 2fr 0.9fr 1fr 0.6fr;
 }
 
 .image__image {
@@ -67,31 +67,46 @@ p {
   text-align: center;
 }
 
-.container__plan {
-  place-self: stretch;
+.container__plan, .container__order {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .plan__box {
   background-color: #f5f7ff;
   width: 22em;
+  width: 80%;
+  height: 100%;
+}
+
+.order__button {
+  width: 80%;
+  height: 50%;
+  font-size: 1em;
+  font-weight: 700;
+  color: #FFF;
+  background-color: #3829e0;
+  border: 0;
 }
 
 .text__heading {
   margin-top: 1.3em;
-  margin-bottom: 0.7em;
+  margin-bottom: 0.5em;
   font-weight: 700;
   color: #1f2f56;
 }
 
 .text__paragraf {
   color: #7280a7;
-  line-height: 1.5em;
+  line-height: 1.7em;
+  font-weight: 500;
 }
 
 /* Footer styling */
