--- a/css/style.sass
+++ b/css/style.sass
@@ -6,10 +6,11 @@ $purple-theme: hsl(245, 75%, 52%)
 $very-pale-blue: hsl(225, 100%, 98%)
 $dark-blue: hsl(223, 47%, 23%)
 $desaturated-blue: hsl(224, 23%, 55%)
+$white: #FFF
 
 
 $container-max-width: 28em
-$container-min-height: 42em
+$container-min-height: 45em
 $container-margin: 2em
 $elements-width: 22em
 
@@ -42,7 +43,7 @@ body
     background-size: contain
 
 
-h1, h3, a, p
+h1, h3, a, p, button
   font-family: 'Red Hat Display', sans-serif
 
 p
@@ -53,7 +54,7 @@ p
 .container
   place-self: center
 
-  background-color: white
+  background-color: $white
 
   max-width: $container-max-width
   min-height: $container-min-height
@@ -62,7 +63,7 @@ p
 
   display: grid
   grid-template-columns: auto
-  grid-template-rows: auto 2fr 1fr 0.8fr 0.5fr
+  grid-template-rows: auto 2fr 0.9fr 1fr 0.6fr
 
 .image__image
   max-width: 100%
@@ -74,25 +75,39 @@ p
   width: $elements-width
   text-align: center
 
-.container__plan
-  place-self: stretch
-
+.container__plan, .container__order
   display: flex
+
   justify-content: center
+  align-items: center
 
 .plan__box
   background-color: $very-pale-blue
   width: $elements-width
+  width: 80%
+  height: 100%
 
-.text__heading
+.order__button
+  width: 80%
+  height: 50%
+  
+  font-size: 1em
+  font-weight: 700
+  color: $white
+
+  background-color: $purple-theme
+  border: 0
+
+.text__heading,
   margin-top: 1.3em
-  margin-bottom: 0.7em
+  margin-bottom: 0.5em
   font-weight: 700
   color: $dark-blue
 
 .text__paragraf
   color: $desaturated-blue
-  line-height: 1.5em
+  line-height: 1.7em
+  font-weight: 500
   
 
 /* Footer styling */
