--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ p {
   -ms-grid-rows: auto 2fr 0.9fr 1fr 0.6fr;
       grid-template-rows: auto 2fr 0.9fr 1fr 0.6fr;
   border-radius: 25px;
+  -webkit-box-shadow: 0px 40px 60px -60px #7280a7;
+          box-shadow: 0px 40px 60px -60px #7280a7;
 }
 
 .image__image {
@@ -106,6 +108,8 @@ p {
   background-color: #3829e0;
   border: 0;
   border-radius: 10px;
+  -webkit-box-shadow: 0px 20px 10px -10px #e0e8ff;
+          box-shadow: 0px 20px 10px -10px #e0e8ff;
 }
 
 .box__icon {
