--- a/css/style.sass
+++ b/css/style.sass
@@ -69,6 +69,8 @@ p
 
   border-radius: $border-radius-amount-outer
 
+  box-shadow: 0px 40px 60px -60px $desaturated-blue
+
 .image__image
   max-width: 100%
   height: auto
@@ -114,6 +116,8 @@ p
   border: 0
 
   border-radius: $border-radius-amonut-inner
+
+  box-shadow: 0px 20px 10px -10px $pale-blue
 
 .box__icon
   justify-self: center
