--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ p {
   -ms-grid-rows: auto 2fr 0.9fr 1fr 0.6fr;
       grid-template-rows: auto 2fr 0.9fr 1fr 0.6fr;
   border-radius: 25px;
-  -webkit-box-shadow: 0px 40px 60px -60px #7280a7;
-          box-shadow: 0px 40px 60px -60px #7280a7;
+  -webkit-box-shadow: 0px 40px 70px -50px #7280a7;
+          box-shadow: 0px 40px 70px -50px #7280a7;
 }
 
 .image__image {
@@ -112,6 +112,10 @@ p {
           box-shadow: 0px 20px 10px -10px #e0e8ff;
 }
 
+.order__button:hover {
+  opacity: 70%;
+}
+
 .box__icon {
   -ms-grid-column-align: center;
       justify-self: center;
@@ -130,10 +134,19 @@ p {
   font-weight: 700;
 }
 
+.box__change:hover {
+  text-decoration: none;
+  opacity: 70%;
+}
+
 .cancel__link {
   color: #7280a7;
   font-weight: 900;
   text-decoration: none;
+}
+
+.cancel__link:hover {
+  color: #1f2f56;
 }
 
 .text__heading {
@@ -160,5 +173,13 @@ p {
 
 .attribution a {
   color: #3e52a3;
+  -webkit-transition: font-size 0.2s ease-in-out;
+  transition: font-size 0.2s ease-in-out;
+}
+
+.attribution a:hover {
+  text-decoration: none;
+  opacity: 80%;
+  font-size: 105%;
 }
 /*# sourceMappingURL=style.css.map */
